--- a/contrib/gitian.yml
+++ b/contrib/gitian.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoin"
+name: "ixcoin"
 suites:
 - "lucid"
 architectures:
@@ -14,8 +14,8 @@ packages:
 - "git-core"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/bitcoin/bitcoin.git"
-  "dir": "bitcoin"
+- "url": "https://github.com/ixcoin/ixcoin.git" 
+  "dir": "ixcoin"
 files:
 - "wxWidgets-2.9.1.tar.bz2"
 - "miniupnpc-1.5.tar.gz"
@@ -42,7 +42,7 @@ script: |
   make $MAKEOPTS install
   cd ..
   #
-  cd bitcoin
+  cd ixcoin
   mkdir -p $OUTDIR/src
   cp -a . $OUTDIR/src
   rm -rf $OUTDIR/src/.git
@@ -51,7 +51,7 @@ script: |
   cp $OUTDIR/src/COPYING $OUTDIR
   cd src
   sed 's/$(DEBUGFLAGS)//' < makefile.unix > makefile.unix.2 && mv makefile.unix.2 makefile.unix
-  PATH=$INSTDIR/bin:$PATH make -f makefile.unix CXX="g++ -I$INSTDIR/include -L$INSTDIR/lib" $MAKEOPTS bitcoin USE_UPNP=1
-  PATH=$INSTDIR/bin:$PATH make -f makefile.unix CXX="g++ -I$INSTDIR/include -L$INSTDIR/lib" $MAKEOPTS bitcoind USE_UPNP=0
+  PATH=$INSTDIR/bin:$PATH make -f makefile.unix CXX="g++ -I$INSTDIR/include -L$INSTDIR/lib" $MAKEOPTS ixcoin USE_UPNP=1
+  PATH=$INSTDIR/bin:$PATH make -f makefile.unix CXX="g++ -I$INSTDIR/include -L$INSTDIR/lib" $MAKEOPTS ixcoind USE_UPNP=0
   mkdir -p $OUTDIR/bin/$GBUILD_BITS
-  install -s bitcoin bitcoind $OUTDIR/bin/$GBUILD_BITS
+  install -s ixcoin ixcoind $OUTDIR/bin/$GBUILD_BITS
