--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -36,7 +36,7 @@ CFLAGS=-O2 -w -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATH
 HEADERS=headers.h strlcpy.h serialize.h uint256.h util.h key.h bignum.h base58.h \
     script.h db.h net.h irc.h keystore.h main.h wallet.h rpc.h uibase.h ui.h noui.h init.h
 
-bitcoin.exe: USE_UPNP:=1
+ixcoin.exe: USE_UPNP:=1
 	ifdef USE_UPNP
 		INCLUDEPATHS += -I"$(DEPSDIR)/upnpc-exe-win32-20110215"
 		LIBPATHS += -L"$(DEPSDIR)/upnpc-exe-win32-20110215"
@@ -44,7 +44,7 @@ bitcoin.exe: USE_UPNP:=1
 		DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
 	endif
 
-bitcoind.exe: USE_UPNP:=0
+ixcoind.exe: USE_UPNP:=0
 	ifdef USE_UPNP
 		INCLUDEPATHS += -I"$(DEPSDIR)/upnpc-exe-win32-20110215"
 		LIBPATHS += -L"$(DEPSDIR)/upnpc-exe-win32-20110215"
@@ -69,7 +69,7 @@ OBJS= \
     cryptopp/obj/cpu.o
 
 
-all: bitcoin.exe
+all: ixcoin.exe
 
 
 obj/%.o: %.cpp $(HEADERS)
@@ -78,17 +78,17 @@ obj/%.o: %.cpp $(HEADERS)
 cryptopp/obj/%.o: cryptopp/%.cpp
 	i586-mingw32msvc-g++ -c $(CFLAGS) -O3 -DCRYPTOPP_DISABLE_ASM -o $@ $<
 
-obj/ui_res.o: ../share/ui.rc  ../share/pixmaps/bitcoin.ico ../share/pixmaps/check.ico ../share/pixmaps/send16.bmp ../share/pixmaps/send16mask.bmp ../share/pixmaps/send16masknoshadow.bmp ../share/pixmaps/send20.bmp ../share/pixmaps/send20mask.bmp ../share/pixmaps/addressbook16.bmp ../share/pixmaps/addressbook16mask.bmp ../share/pixmaps/addressbook20.bmp ../share/pixmaps/addressbook20mask.bmp
+obj/ui_res.o: ../share/ui.rc  ../share/pixmaps/ixcoin.ico ../share/pixmaps/check.ico ../share/pixmaps/send16.bmp ../share/pixmaps/send16mask.bmp ../share/pixmaps/send16masknoshadow.bmp ../share/pixmaps/send20.bmp ../share/pixmaps/send20mask.bmp ../share/pixmaps/addressbook16.bmp ../share/pixmaps/addressbook16mask.bmp ../share/pixmaps/addressbook20.bmp ../share/pixmaps/addressbook20mask.bmp
 	i586-mingw32msvc-windres $(DEFS) $(INCLUDEPATHS) -o $@ -i $<
 
-bitcoin.exe: $(OBJS) obj/ui.o obj/uibase.o obj/ui_res.o
+ixcoin.exe: $(OBJS) obj/ui.o obj/uibase.o obj/ui_res.o
 	i586-mingw32msvc-g++ $(CFLAGS) -mwindows -Wl,--subsystem,windows -o $@ $(LIBPATHS) $^ $(WXLIBS) $(LIBS)
 
 
 obj/nogui/%.o: %.cpp $(HEADERS)
 	i586-mingw32msvc-g++ -c $(CFLAGS) -o $@ $<
 
-bitcoind.exe: $(OBJS:obj/%=obj/nogui/%) obj/ui_res.o
+ixcoind.exe: $(OBJS:obj/%=obj/nogui/%) obj/ui_res.o
 	i586-mingw32msvc-g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 
@@ -106,6 +106,6 @@ clean:
 	-rm -f cryptopp/obj/*.o
 	-rm -f test/*.o
 	-rm -f headers.h.gch
-	-rm -f bitcoin.exe
-	-rm -f bitcoind.exe
+	-rm -f ixcoin.exe
+	-rm -f ixcoind.exe
 	-rm -f test_bitcoin.exe
