--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -8,7 +8,7 @@ WXINCLUDEPATHS=$(shell wx-config --cxxflags)
 
 WXLIBS=$(shell wx-config --libs)
 
-USE_UPNP:=0
+#USE_UPNP:=0
 
 DEFS=-DNOPCH -DFOURWAYSSE2 -DUSE_SSL
 
@@ -23,10 +23,18 @@ LIBS= \
    -l ssl \
    -l crypto
 
-ifdef USE_UPNP
-	LIBS += -l miniupnpc
-	DEFS += -DUSE_UPNP=$(USE_UPNP)
-endif
+ixcoin: USE_UPNP:=1
+	ifdef USE_UPNP
+		LIBS += -l miniupnpc
+		DEFS += -DUSE_UPNP=$(USE_UPNP)
+	endif
+
+ixcoind: USE_UPNP:=0
+	ifdef USE_UPNP
+		LIBS += -l miniupnpc
+		DEFS += -DUSE_UPNP=$(USE_UPNP)
+	endif
+
 
 LIBS+= \
  -Wl,-Bdynamic \
@@ -56,7 +64,7 @@ OBJS= \
     cryptopp/obj/cpu.o
 
 
-all: bitcoin
+all: ixcoin
 
 
 obj/%.o: %.cpp $(HEADERS)
@@ -65,14 +73,14 @@ obj/%.o: %.cpp $(HEADERS)
 cryptopp/obj/%.o: cryptopp/%.cpp
 	$(CXX) -c $(CXXFLAGS) -O3 -o $@ $<
 
-bitcoin: $(OBJS) obj/ui.o obj/uibase.o
+ixcoin: $(OBJS) obj/ui.o obj/uibase.o
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(WXLIBS) $(LIBS)
 
 
 obj/nogui/%.o: %.cpp $(HEADERS)
 	$(CXX) -c $(CXXFLAGS) -o $@ $<
 
-bitcoind: $(OBJS:obj/%=obj/nogui/%)
+ixcoind: $(OBJS:obj/%=obj/nogui/%)
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LIBS)
 
 obj/test/%.o: test/%.cpp $(HEADERS)
@@ -82,9 +90,11 @@ test_bitcoin: obj/test/test_bitcoin.o
 	$(CXX) $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS) -lboost_unit_test_framework
 
 clean:
-	-rm -f bitcoin bitcoind test_bitcoin
+	-rm -f ixcoin ixcoind test_bitcoin
 	-rm -f obj/*.o
 	-rm -f obj/nogui/*.o
 	-rm -f obj/test/*.o
 	-rm -f cryptopp/obj/*.o
 	-rm -f headers.h.gch
+	-rm -f ixcoin
+	-rm -f ixcoind
