--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -2,7 +2,7 @@
 # Distributed under the MIT/X11 software license, see the accompanying
 # file license.txt or http://www.opensource.org/licenses/mit-license.php.
 
-USE_UPNP:=0
+#USE_UPNP:=1
 
 INCLUDEPATHS= \
  -I"C:\boost-1.43.0-mgw" \
@@ -29,19 +29,37 @@ LIBS= \
  -l ssl \
  -l crypto
 
+#added -static-libgcc -static-libstdc++ //ixcoin
+ 
 DEFS=-DWIN32 -D__WXMSW__ -D_WINDOWS -DNOPCH -DUSE_SSL
-DEBUGFLAGS=-g -D__WXDEBUG__
-CFLAGS=-mthreads -O2 -w -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
+DEBUGFLAGS=-g -D__WXDEBUG__ 
+CFLAGS=-mthreads -O2 -w -Wno-invalid-offsetof -Wformat -static-libgcc -static-libstdc++ $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
 HEADERS=headers.h strlcpy.h serialize.h uint256.h util.h key.h bignum.h base58.h \
-    script.h db.h net.h irc.h keystore.h main.h wallet.h rpc.h uibase.h ui.h noui.h \
-    init.h crypter.h
+    script.h db.h net.h irc.h keystore.h main.h wallet.h rpc.h uibase.h ui.h noui.h init.h
 
-ifdef USE_UPNP
- INCLUDEPATHS += -I"C:\upnpc-exe-win32-20110215"
- LIBPATHS += -L"C:\upnpc-exe-win32-20110215"
- LIBS += -l miniupnpc -l iphlpapi
- DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
-endif
+#ifdef USE_UPNP
+# INCLUDEPATHS += -I"C:\upnpc-exe-win32-20110215"
+# LIBPATHS += -L"C:\upnpc-exe-win32-20110215"
+# LIBS += -l miniupnpc -l iphlpapi
+# DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
+#endif
+
+ixcoin.exe: USE_UPNP:=1
+	ifdef USE_UPNP
+		INCLUDEPATHS += -I"C:\upnpc-exe-win32-20110215"
+		LIBPATHS += -L"C:\upnpc-exe-win32-20110215"
+		LIBS += -l miniupnpc -l iphlpapi
+		DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
+	endif
+
+ixcoind.exe: USE_UPNP:=0
+	ifdef USE_UPNP
+		INCLUDEPATHS += -I"C:\upnpc-exe-win32-20110215"
+		LIBPATHS += -L"C:\upnpc-exe-win32-20110215"
+		LIBS += -l miniupnpc -l iphlpapi
+		DEFS += -DSTATICLIB -DUSE_UPNP=$(USE_UPNP)
+	endif
+
 
 LIBS += -l kernel32 -l user32 -l gdi32 -l comdlg32 -l winspool -l winmm -l shell32 -l comctl32 -l ole32 -l oleaut32 -l uuid -l rpcrt4 -l advapi32 -l ws2_32 -l shlwapi
 
@@ -56,12 +74,11 @@ OBJS= \
     obj/wallet.o \
     obj/rpc.o \
     obj/init.o \
-    obj/crypter.o \
     cryptopp/obj/sha.o \
     cryptopp/obj/cpu.o
 
 
-all: bitcoin.exe
+all: ixcoin.exe
 
 
 obj/%.o: %.cpp $(HEADERS)
@@ -70,27 +87,27 @@ obj/%.o: %.cpp $(HEADERS)
 cryptopp/obj/%.o: cryptopp/%.cpp
 	g++ -c $(CFLAGS) -O3 -DCRYPTOPP_X86_ASM_AVAILABLE -o $@ $<
 
-obj/ui_res.o: ../share/ui.rc  ../share/pixmaps/bitcoin.ico ../share/pixmaps/check.ico ../share/pixmaps/send16.bmp ../share/pixmaps/send16mask.bmp ../share/pixmaps/send16masknoshadow.bmp ../share/pixmaps/send20.bmp ../share/pixmaps/send20mask.bmp ../share/pixmaps/addressbook16.bmp ../share/pixmaps/addressbook16mask.bmp ../share/pixmaps/addressbook20.bmp ../share/pixmaps/addressbook20mask.bmp
+obj/ui_res.o: ../share/ui.rc  ../share/pixmaps/ixcoin.ico ../share/pixmaps/check.ico ../share/pixmaps/send16.bmp ../share/pixmaps/send16mask.bmp ../share/pixmaps/send16masknoshadow.bmp ../share/pixmaps/send20.bmp ../share/pixmaps/send20mask.bmp ../share/pixmaps/addressbook16.bmp ../share/pixmaps/addressbook16mask.bmp ../share/pixmaps/addressbook20.bmp ../share/pixmaps/addressbook20mask.bmp
 	windres $(DEFS) $(INCLUDEPATHS) -o $@ -i $<
 
-bitcoin.exe: $(OBJS) obj/ui.o obj/uibase.o obj/ui_res.o
+ixcoin.exe: $(OBJS) obj/ui.o obj/uibase.o obj/ui_res.o
 	g++ $(CFLAGS) -mwindows -Wl,--subsystem,windows -o $@ $(LIBPATHS) $^ $(WXLIBS) $(LIBS)
 
 
 obj/nogui/%.o: %.cpp $(HEADERS)
 	g++ -c $(CFLAGS) -o $@ $<
 
-bitcoind.exe: $(OBJS:obj/%=obj/nogui/%) obj/ui_res.o
+ixcoind.exe: $(OBJS:obj/%=obj/nogui/%) obj/ui_res.o
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 obj/test/%.o: obj/test/%.cpp $(HEADERS)
 	g++ -c $(CFLAGS) -o $@ $<
 
-test_bitcoin.exe: obj/test/test_bitcoin.o $(filter-out obj/nogui/init.o,$(OBJS:obj/%=obj/nogui/%))
+test_bitcoin: obj/test/test_bitcoin.o
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 clean:
-	-del /Q bitcoin bitcoind test_bitcoin
+	-del /Q ixcoin ixcoind test_bitcoin
 	-del /Q obj\*
 	-del /Q obj\nogui\*
 	-del /Q obj\test\*
