--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -2,11 +2,11 @@
 # Distributed under the MIT/X11 software license, see the accompanying
 # file license.txt or http://www.opensource.org/licenses/mit-license.php.
 
-# Mac OS X makefile for bitcoin
+# Mac OS X makefile for ixcoin
 # Laszlo Hanyecz (solar@heliacal.net)
 
 CXX=llvm-g++
-DEPSDIR=/Users/macosuser/bitcoin/deps
+DEPSDIR=/Users/macosuser/ixcoin/deps
 
 INCLUDEPATHS= \
  -I"$(DEPSDIR)/include"
@@ -15,8 +15,6 @@ LIBPATHS= \
  -L"$(DEPSDIR)/lib"
 
 WXLIBS=$(shell $(DEPSDIR)/bin/wx-config --libs --static)
-
-USE_UPNP:=0
 
 LIBS= -dead_strip \
  $(DEPSDIR)/lib/libdb_cxx-4.8.a \
@@ -33,8 +31,7 @@ DEBUGFLAGS=-g -DwxDEBUG_LEVEL=0
 # ppc doesn't work because we don't support big-endian
 CFLAGS=-mmacosx-version-min=10.5 -arch i386 -arch x86_64 -O3 -Wno-invalid-offsetof -Wformat $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS)
 HEADERS=headers.h strlcpy.h serialize.h uint256.h util.h key.h bignum.h base58.h \
-    script.h db.h net.h irc.h keystore.h main.h wallet.h rpc.h uibase.h ui.h noui.h \
-    init.h crypter.h
+    script.h db.h net.h irc.h keystore.h main.h wallet.h rpc.h uibase.h ui.h noui.h init.h
 
 OBJS= \
     obj/util.o \
@@ -47,17 +44,24 @@ OBJS= \
     obj/wallet.o \
     obj/rpc.o \
     obj/init.o \
-    obj/crypter.o \
     cryptopp/obj/sha.o \
     cryptopp/obj/cpu.o
 
-ifdef USE_UPNP
-	LIBS += $(DEPSDIR)/lib/libminiupnpc.a
-	DEFS += -DUSE_UPNP=$(USE_UPNP)
+ixcoin: USE_UPNP:=1
+	ifdef USE_UPNP
+		LIBS += $(DEPSDIR)/lib/libminiupnpc.a
+		DEFS += -DUSE_UPNP=$(USE_UPNP)
+	endif
+
+ixcoind: USE_UPNP:=0
+	ifdef USE_UPNP
+		LIBS += $(DEPSDIR)/lib/libminiupnpc.a
+		DEFS += -DUSE_UPNP=$(USE_UPNP)
 endif
 	
+	
 
-all: bitcoin
+all: ixcoin
 
 
 obj/%.o: %.cpp $(HEADERS)
@@ -66,24 +70,24 @@ obj/%.o: %.cpp $(HEADERS)
 cryptopp/obj/%.o: cryptopp/%.cpp
 	$(CXX) -c $(CFLAGS) -O3 -DCRYPTOPP_DISABLE_ASM -o $@ $<
 
-bitcoin: $(OBJS) obj/ui.o obj/uibase.o
+ixcoin: $(OBJS) obj/ui.o obj/uibase.o
 	$(CXX) $(CFLAGS) -o $@ $(LIBPATHS) $^ $(WXLIBS) $(LIBS)
 
 
 obj/nogui/%.o: %.cpp $(HEADERS)
 	$(CXX) -c $(CFLAGS) -o $@ $<
 
-bitcoind: $(OBJS:obj/%=obj/nogui/%)
+ixcoind: $(OBJS:obj/%=obj/nogui/%)
 	$(CXX) $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 obj/test/%.o: test/%.cpp $(HEADERS)
 	$(CXX) -c $(CFLAGS) -o $@ $<
 
-test_bitcoin: obj/test/test_bitcoin.o $(filter-out obj/nogui/init.o,$(OBJS:obj/%=obj/nogui/%))
+test_bitcoin: obj/test/test_bitcoin.o
 	$(CXX) $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS) -lboost_unit_test_framework
 
 clean:
-	-rm -f bitcoin bitcoind test_bitcoin
+	-rm -f ixcoin ixcoind test_bitcoin
 	-rm -f obj/*.o
 	-rm -f obj/nogui/*.o
 	-rm -f obj/test/*.o
